--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,6 +16,7 @@ jobs:
     - name: set up JDK 1.8
       uses: actions/setup-java@v3
       with:
+        distribution: 'temurin'
         java-version: 1.8
     - name: Build with Gradle
       run: cd Scientory-by-PHJ-STUDIO-android;chmod +x gradlew;sudo ./gradlew build
@@ -28,6 +29,7 @@ jobs:
         - name: set up JDK 1.8
           uses: actions/setup-java@v3
           with:
+            distribution: 'temurin'
             java-version: 1.8
         - name: Build debug APK
           run: cd Scientory-by-PHJ-STUDIO-android;bash ./gradlew assembleDebug --stacktrace
